--- a/.gitignore
+++ b/.gitignore
@@ -1,86 +1,106 @@
+# Byte-compiled / optimized / DLL files
+__pycache__/
 *.py[cod]
-.DS_Store
+*$py.class
+
 # C extensions
 *.so
 
-# Packages
-*.egg
-*.egg-info
-build
-eggs
-.eggs
-parts
-var
-sdist
-develop-eggs
+# Distribution / packaging
+.Python
+env/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
 .installed.cfg
-lib
-lib64
-MANIFEST
+*.egg
+
+# PyInstaller
+#  Usually these files are written by a python script from a template
+#  before PyInstaller builds the exe, so as to inject date/other infos into it.
+*.manifest
+*.spec
 
 # Installer logs
 pip-log.txt
-npm-debug.log
-pip-selfcheck.json
+pip-delete-this-directory.txt
 
 # Unit test / coverage reports
+htmlcov/
+.tox/
 .coverage
-.tox
-nosetests.xml
-htmlcov
+.coverage.*
 .cache
-.pytest_cache
-.mypy_cache
+nosetests.xml
+coverage.xml
+*.cover
+.hypothesis/
+.pytest_cache/
 
 # Translations
 *.mo
+*.pot
 
-# Mr Developer
-.mr.developer.cfg
-.project
-.pydevproject
+# Django stuff:
+*.log
+local_settings.py
 
-# SQLite
-test_exp_framework
+# Flask stuff:
+instance/
+.webassets-cache
 
-# npm
-node_modules/
+# Scrapy stuff:
+.scrapy
 
-# dolphin
-.directory
-libpeerconnection.log
+# Sphinx documentation
+docs/_build/
 
-# setuptools
-dist
+# PyBuilder
+target/
 
-# IDE Files
-atlassian-ide-plugin.xml
-.idea/
-*.swp
-*.kate-swp
-.ropeproject/
+# Jupyter Notebook
+.ipynb_checkpoints
 
-# Python3 Venv Files
-.venv/
-bin/
-include/
-lib/
-lib64
-pyvenv.cfg
-share/
-venv/
+# pyenv
 .python-version
 
-# Cython
-*.c
+# celery beat schedule file
+celerybeat-schedule
 
-# Emacs backup
-*~
+# SageMath parsed files
+*.sage.py
 
-# VSCode
-/.vscode
+# dotenv
+.env
 
-# Automatically generated files
-docs/preconvert
-site/
-out
+# virtualenv
+.venv
+venv/
+ENV/
+
+# Spyder project settings
+.spyderproject
+.spyproject
+
+# Rope project settings
+.ropeproject
+
+# mkdocs documentation
+/site
+
+# mypy
+.mypy_cache/
+
+# IDE settings
+.vscode/
+.idea/
