--- a/setup.cfg
+++ b/setup.cfg
@@ -1,4 +1,18 @@
+[bumpversion]
+current_version = 0.1.0
+commit = True
+tag = True
+
+[bumpversion:file:setup.py]
+search = version='{current_version}'
+replace = version='{new_version}'
+
+[bumpversion:file:blueprint_synergy/__init__.py]
+search = __version__ = '{current_version}'
+replace = __version__ = '{new_version}'
+
+[bdist_wheel]
+universal = 1
+
 [flake8]
-max-line-length = 100
-extend-ignore =
-    E203  # https://github.com/psf/black/blob/master/docs/the_black_code_style.md#slices
+exclude = docs
