--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-# Config file for automatic testing at travis-ci.com
+# Config file for automatic testing at travis-ci.org
 
 language: python
 python:
@@ -6,23 +6,20 @@ python:
   - 3.7
   - 3.6
 
-# Command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
+# command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
 install: pip install -U tox-travis
 
-# Command to run tests, e.g. python setup.py test
+# command to run tests, e.g. python setup.py test
 script: tox
 
-# Assuming you have installed the travis-ci CLI tool, after you
-# create the Github repo and add it to Travis, run the
-# following command to finish PyPI deployment setup:
-# $ travis encrypt --add deploy.password
+# deploy new versions to PyPI
 deploy:
   provider: pypi
   distributions: sdist bdist_wheel
-  user: alexgrushkobeamery
+  user: audreyr
   password:
     secure: PLEASE_REPLACE_ME
   on:
     tags: true
-    repo: audreyr/blueprint_synergy
+    repo: audreyr/python_boilerplate
     python: 3.8
