--- a/setup.cfg
+++ b/setup.cfg
@@ -1,18 +1,11 @@
 [bumpversion]
-current_version = 0.1.0
+current_version = 0.5.10
 commit = True
 tag = True
+
+[metadata]
+description-file = README.rst
 
 [bumpversion:file:setup.py]
 search = version='{current_version}'
 replace = version='{new_version}'
-
-[bumpversion:file:blueprint_synergy/__init__.py]
-search = __version__ = '{current_version}'
-replace = __version__ = '{new_version}'
-
-[bdist_wheel]
-universal = 1
-
-[flake8]
-exclude = docs
