--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,6 @@
 [tox]
-envlist = py36, py37, py38, flake8
+envlist = py36, py37,py38 pypy, docs
+skipsdist = true
 
 [travis]
 python =
@@ -7,13 +8,18 @@ python =
     3.7: py37
     3.6: py36
 
-[testenv:flake8]
-basepython = python
-deps = flake8
-commands = flake8 blueprint_synergy tests
+[testenv:docs]
+basepython=python
+changedir=docs
+deps=sphinx
+commands=
+    sphinx-build -b html -d {envtmpdir}/doctrees . {envtmpdir}/html
 
 [testenv]
 setenv =
     PYTHONPATH = {toxinidir}
-
-commands = python setup.py test
+deps =
+    -r{toxinidir}/requirements_dev.txt
+commands =
+    python -m pip install --upgrade pip
+    pytest
